Fix overflow of numbers

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
   background-color: #fff;
   height: 125px;
   margin-bottom: .5rem;
+  overflow: hidden;
 }
 
 .calculator__display {
